[tool.poetry]
name = "baggyexemplarysyndrome"
version = "0.1.0"
description = ""
authors = ["VIJAYKUMAR135 <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "4.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
